--- a/WpfApp3/WpfApp3.csproj
+++ b/WpfApp3/WpfApp3.csproj
@@ -54,6 +54,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Calculator.cs" />
+    <Compile Include="Fraction.cs" />
     <Compile Include="SignForm.xaml.cs">
       <DependentUpon>SignForm.xaml</DependentUpon>
     </Compile>
