--- a/WpfApp3/WpfApp3.csproj
+++ b/WpfApp3/WpfApp3.csproj
@@ -56,6 +56,7 @@
     </ApplicationDefinition>
     <Compile Include="Calculator.cs" />
     <Compile Include="Fraction.cs" />
+    <Compile Include="OperationInfo.cs" />
     <Compile Include="SignForm.xaml.cs">
       <DependentUpon>SignForm.xaml</DependentUpon>
     </Compile>
